maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: object univers is not a member of package plm
    var direction=plm.univers.random3()
                      ^