maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	while(!estSurBiscuit()){
    var direction=plm.univers.random3()
    if( direction== 0 && !estFaceMur()){ avance()}
    if (direction==1){droite()}
    if(direction==2){gauche()}
  }
  prendBiscuit()
}